# cxx-engine-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cxx
lib/: CMakeLists.txt
lib/engine/: engine.cxx  engine.hxx  enginetest.cxx  enginetest.hxx  icengine.cxx  icengine.hxx  overheattest.cxx  overheattest.hxx
lib/utility/: piecewiselinearfunction.cxx  piecewiselinearfunction.hxx
